--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ li {
   margin-top: 0px;
   margin-bottom: 0px;
   min-width: 350px;
+  padding: 0px;
 }
 
 .container-nav {
@@ -158,7 +159,7 @@ p {
   padding-top: 30px;
   margin-bottom: 0px;
 }
-.team-list li:not(:last-child) {
+.team-list > li:not(:last-child) {
   margin-right: 30px;
 }
 .team-section {
@@ -182,13 +183,20 @@ p {
   padding-left: 0px;
   padding-top: 50px;
 }
-.team-list li {
+.team-list > li {
+  background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+.social-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px;
+  padding: 16px 32px 30px 16px;
+}
 .socila-link-icon {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
@@ -197,7 +205,6 @@ p {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  margin-bottom: 30px;
 }
 .social-icon {
   fill: currentColor;
@@ -220,9 +227,17 @@ p {
   align-items: center;
   padding: 60px 0;
 }
+.footer-section .container {
+  display: flex;
+}
 footer {
   min-height: 252px;
 }
+
+.footer-inf {
+  display: block;
+}
+
 .address {
   font-style: normal;
   color: #ffffff;
@@ -242,7 +257,7 @@ footer {
   padding-top: 9px;
 }
 .footer-link-icon {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
@@ -251,7 +266,6 @@ footer {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  margin-bottom: 30px;
 }
 .footer-icon {
   fill: currentColor;
@@ -263,6 +277,11 @@ footer {
   background-color: var(--accent-color);
   color: #ffffff;
 }
+.action {
+  display: inline-block;
+  padding-bottom: 72px;
+  padding-left: 70px;
+}
 .action p {
   margin: 0;
   color: #ffffff;
@@ -272,10 +291,24 @@ footer {
   letter-spacing: 0.03em;
   text-align: left;
   text-transform: uppercase;
-}
 
+  padding-bottom: 20px;
+}
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  margin: 0px;
+  padding: 0px;
+}
+.footer-social-list > li:not(:last-child) {
+  margin-right: 10px;
+}
 /*===========Partner================*/
 
+.partner {
+  padding-bottom: 90px;
+  padding-top: 90px;
+}
 .partner h1 {
   font-size: 36px;
   font-style: normal;
@@ -283,6 +316,7 @@ footer {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-align: center;
+  padding-bottom: 50px;
   margin: 0;
 }
 .partner-list {
@@ -292,17 +326,25 @@ footer {
   margin: 0;
   padding: 0;
 }
+.partner-list > li:not(:last-child) {
+  padding-right: 30px;
+}
 
 .partner-link-icon {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  width: 170px;
-  height: 90px;
-  fill: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  fill: #afb1b8;
+}
+.partner-icon {
+  width: 170px;
+  height: 90px;
+  /*display: flex;
+  align-items: center;
+  justify-content: center;*/
 }
 
 .partner a {
@@ -313,6 +355,8 @@ footer {
 .partner-link-icon:hover,
 .partner-link-icon:focus {
   fill: var(--accent-color);
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
 }
 
 /* =================hero============ */
