--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
   --title-text-color: #757575;
   --accent-color: #2196f3;
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 img {
   display: block;
@@ -297,6 +302,7 @@ footer {
 .footer-social-list {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 0px;
   padding: 0px;
 }
@@ -321,37 +327,30 @@ footer {
 }
 .partner-list {
   display: flex;
-  justify-content: center;
   align-items: center;
   margin: 0;
   padding: 0;
 }
 .partner-list > li:not(:last-child) {
-  padding-right: 30px;
+  margin-right: 30px;
 }
 
 .partner-link-icon {
   display: flex;
   justify-content: center;
   align-items: center;
-
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: #afb1b8;
-}
-.partner-icon {
   width: 170px;
   height: 90px;
-  /*display: flex;
-  align-items: center;
-  justify-content: center;*/
 }
 
-.partner a {
-  display: inline-block;
-  justify-content: center;
-  align-items: center;
+.partner-icon :nth-child {
+  width: 44px;
+  height: 49px;
 }
+
 .partner-link-icon:hover,
 .partner-link-icon:focus {
   fill: var(--accent-color);
@@ -430,6 +429,7 @@ footer {
   justify-content: center;
   margin-top: 0px;
   padding-top: 50px;
+  padding-left: 0px;
 }
 .work-list li:not(:last-child) {
   padding-right: 30px;
@@ -466,46 +466,29 @@ footer {
   margin-right: 0px;
 }
 ul .features {
+  padding: 0px;
   margin-top: 0;
 }
 .features-section {
   padding-top: 94px;
 }
-/*.features-container {
-  min-width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-}*/
 
-.features ul:not(:first-child) {
+.features > li:not(:last-child) {
   margin-right: 30px;
 }
 .features-item {
   width: 270px;
 }
 .thumb {
-  margin-right: 30px;
   margin-bottom: 30px;
-  background-position: 50% 50%;
-}
-.thumb:nth-child(1) {
-  background-color: #f5f4fa;
-}
-.thumb:nth-child(2) {
-  background-color: #f5f4fa;
-}
-.thumb:nth-child(3) {
-  background-color: #f5f4fa;
-}
-.thumb:nth-child(4) {
   background-color: #f5f4fa;
 }
 
 .features-icon {
+  display: flex;
   height: 120px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  width: 270px;
+  padding: 25px 100px;
 }
 
 /*=======================Портфолио====================*/
@@ -581,6 +564,13 @@ ul .features {
 }
 .portfolio-menu .item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
+}
+
+.portfolio-menu .item:first-child {
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .item h2 {
