--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,8 @@ ul .features {
   margin-bottom: 0px;
 }
 
-.portfolio-menu .item:first-child {
+.portfolio-menu .item:hover,
+.portfolio-menu .item:focus {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
