--- a/css/style.css
+++ b/css/style.css
@@ -93,13 +93,12 @@ li {
   display: flex;
   margin-top: 0px;
   margin-bottom: 0px;
-  min-width: 350px;
+  min-width: 360px;
   padding: 0px;
 }
 
 .container-nav {
-  padding-top: 0px;
-  padding-left: 331px;
+  padding-left: 329px;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -130,9 +129,13 @@ h3,
 p {
   color: var(--primary-text-color);
 }
+.contact-item {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
 .link-icon {
-  width: 16px;
-  height: 12px;
+  margin-right: 10px;
   fill: currentColor;
 }
 
@@ -155,6 +158,7 @@ p {
   letter-spacing: 0.03em;
 
   padding-top: 10px;
+  margin: 0px;
 }
 .team-list h3 {
   font-weight: 500;
@@ -162,7 +166,7 @@ p {
   line-height: 1.18;
 
   padding-top: 30px;
-  margin-bottom: 0px;
+  margin: 0px;
 }
 .team-list > li:not(:last-child) {
   margin-right: 30px;
@@ -198,7 +202,7 @@ p {
   display: flex;
   justify-content: space-between;
   margin: 0px;
-  padding: 16px 32px 30px 16px;
+  padding: 16px 32px 30px 32px;
 }
 .socila-link-icon {
   display: flex;
@@ -258,6 +262,7 @@ footer {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+
 .address-contact {
   padding-top: 9px;
 }
@@ -267,7 +272,7 @@ footer {
   align-items: center;
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.1);
-  color: #afb1b8;
+  color: #ffffff;
   width: 44px;
   height: 44px;
   border-radius: 50%;
